# aoc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
2024/day/1/: CMakeLists.txt
2024/day/1/lib/: historian_histeria.cpp  historian_histeria.h
2024/day/1/unittest/: testHistorianHisteria.cpp
2024/day/2/lib/: aoc_2024_day_2.cpp  aoc_2024_day_2.h
2024/day/2/unittest/: testAOC2024Day2.cpp
2024/day/3/: CMakeLists.txt
2024/day/3/data/: input.txt
2024/day/3/lib/: aoc_2024_day_3.cpp  aoc_2024_day_3.h
2024/day/3/unittest/: testAOC2024Day3.cpp
2024/day/4/lib/: aoc_2024_day_4.cpp  aoc_2024_day_4.h
2024/day/4/unittest/: test_aoc_2024_day_4.cpp
